// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content - snapshots - can add custom class 1`] = `
preact-render-spy (1 nodes)
-------
<div class="content custom"></div>

`;

exports[`Content - snapshots - can render 1`] = `
preact-render-spy (1 nodes)
-------
<div class="content"></div>

`;

exports[`Content - snapshots - can render children 1`] = `
preact-render-spy (1 nodes)
-------
<div class="content">
  <p>Child 1</p>
  <p>Child 2</p>
</div>

`;
